--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@tailwindcss/postcss": "^4.0.17",
     "cra-template": "1.3.0",
     "lucide-react": "^0.484.0",
+    "motion": "^12.6.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.4.0",
