--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "motion": "^12.6.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-google-recaptcha": "^3.1.0",
     "react-router-dom": "^7.4.0",
     "react-scripts": "5.0.1",
+    "tailwind-scrollbar-hide": "^2.0.0",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
