--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.4.0",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.30.3",
+    "slick-carousel": "^1.8.1",
+    "slick-slider": "^1.8.2",
     "tailwind-scrollbar-hide": "^2.0.0",
     "web-vitals": "^4.2.4"
   },
