--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@mui/material": "^7.0.1",
     "@tailwindcss/postcss": "^4.0.17",
     "cra-template": "1.3.0",
+    "flowbite-react": "^0.11.7",
     "framer-motion": "^12.6.3",
     "lucide-react": "^0.484.0",
     "motion": "^12.6.2",
@@ -51,6 +52,6 @@
     "autoprefixer": "^10.4.21",
     "fluid-tailwind": "^1.0.4",
     "postcss": "^8.5.3",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^3.3.2"
   }
 }
