--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^7.0.1",
     "@mui/material": "^7.0.1",
+    "@re-dev/react-truncate": "^0.5.1",
     "@tailwindcss/postcss": "^4.0.17",
     "cra-template": "1.3.0",
     "flowbite-react": "^0.11.7",
@@ -52,6 +53,7 @@
     "autoprefixer": "^10.4.21",
     "fluid-tailwind": "^1.0.4",
     "postcss": "^8.5.3",
+    "prettier": "^3.5.3",
     "tailwindcss": "^3.3.2"
   }
 }
