--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "@mui/material": "^7.0.1",
     "@re-dev/react-truncate": "^0.5.1",
     "@tailwindcss/postcss": "^4.0.17",
+    "@tanstack/react-query": "^5.74.4",
+    "axios": "^1.8.4",
     "cra-template": "1.3.0",
     "flowbite-react": "^0.11.7",
     "framer-motion": "^12.6.3",
@@ -17,6 +19,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-google-recaptcha": "^3.1.0",
+    "react-hook-form": "^7.56.1",
     "react-router-dom": "^7.4.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.3",
