--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-router-dom": "^7.4.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.3",
+    "react-spinners": "^0.17.0",
     "slick-carousel": "^1.8.1",
     "slick-slider": "^1.8.2",
     "tailwind-scrollbar-hide": "^2.0.0",
