--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cra-template": "1.3.0",
     "flowbite-react": "^0.11.7",
     "framer-motion": "^12.6.3",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.484.0",
     "motion": "^12.6.2",
     "react": "^19.0.0",
