--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.3",
     "react-spinners": "^0.17.0",
+    "react-toastify": "^11.0.5",
     "slick-carousel": "^1.8.1",
     "slick-slider": "^1.8.2",
     "tailwind-scrollbar-hide": "^2.0.0",
